@@ -1,12 +1,17 @@
 DIST darts-0.3.tar.gz 245615 RMD160 ddcfc2f0eb19ba2b231e01522f1429160be04960 SHA1 d28397a7ad4b2705117c02412d777a3257346129 SHA256 95887989b2dfe50628b52f0202f1503dd7522c879fcaf6bac13b9b216c42c217
+DIST darts-0.31.tar.gz 227448 RMD160 a4f3e00ff992d34031668fb9fc6ef0c9e8b5965d SHA1 cd76d69ed5c356bbd94b251daec004283f5771bb SHA256 e76d2cb8bd99ebb9f317cb3924781cce2cb558920e3b76f611417cb4e0482e0a
 EBUILD darts-0.3.ebuild 762 RMD160 bbf17ac5b5ea952f9c97e758dc3003d9ee96d11f SHA1 95a6263d4f84328061135313355a69e57253a8cf SHA256 9150025aec9c7846f5ed9aa2abbd7621553a153071345cdde8ffa4fd194d83c5
 MD5 09c8b1ce77908df7e02931c87333b8f8 darts-0.3.ebuild 762
 RMD160 bbf17ac5b5ea952f9c97e758dc3003d9ee96d11f darts-0.3.ebuild 762
 SHA256 9150025aec9c7846f5ed9aa2abbd7621553a153071345cdde8ffa4fd194d83c5 darts-0.3.ebuild 762
-MISC ChangeLog 2022 RMD160 bdc80c6f669805d907ab7b84de2b9950b29bf075 SHA1 71f68dcbb57170eeb193178a6ec3b904e922a0ad SHA256 0c2959030aee748734551477fde68baea87b9a93b2497bfa63fcc286e7304360
-MD5 59f27f42442213517b2565f3bf24887e ChangeLog 2022
-RMD160 bdc80c6f669805d907ab7b84de2b9950b29bf075 ChangeLog 2022
-SHA256 0c2959030aee748734551477fde68baea87b9a93b2497bfa63fcc286e7304360 ChangeLog 2022
+EBUILD darts-0.31.ebuild 784 RMD160 9609f67fd82839998a9ba8ef19ce39233e0f0364 SHA1 72d26446f7db3fd55438cbbee1e882e2516c5e1d SHA256 1fe50f8eb3d2520295ae57bbe44cdb95a35f0afcf2616c496b939f52657e7996
+MD5 dc84ecd55d6cf239ae4eb7a9b7ff18f1 darts-0.31.ebuild 784
+RMD160 9609f67fd82839998a9ba8ef19ce39233e0f0364 darts-0.31.ebuild 784
+SHA256 1fe50f8eb3d2520295ae57bbe44cdb95a35f0afcf2616c496b939f52657e7996 darts-0.31.ebuild 784
+MISC ChangeLog 2203 RMD160 0034b1d24e293cc0b67ccfc20c347483958d22c3 SHA1 4be5ad50ae4ad71d7ade68cd690ee9158960f208 SHA256 e4b25d85845e053bc7f1c589e84498bbace2205a69b7e7f270472379d824f457
+MD5 ddba6a7fd3a6057a88289cf2479d8208 ChangeLog 2203
+RMD160 0034b1d24e293cc0b67ccfc20c347483958d22c3 ChangeLog 2203
+SHA256 e4b25d85845e053bc7f1c589e84498bbace2205a69b7e7f270472379d824f457 ChangeLog 2203
 MISC metadata.xml 156 RMD160 537178ef5a820896e97475fb9aded47d50474bef SHA1 2a4ef4879b918a28132d21cd6d1bbaa2a30dccde SHA256 0e8490f9c62cb74e5894b52f643a02de0024d97dbfebad43082dce6bcb39555f
 MD5 41d7ac32dc54956e937401bb5a2c3810 metadata.xml 156
 RMD160 537178ef5a820896e97475fb9aded47d50474bef metadata.xml 156
@@ -14,3 +19,6 @@ SHA256 0e8490f9c62cb74e5894b52f643a02de0024d97dbfebad43082dce6bcb39555f metadata
 MD5 57edad4a3b8d31541edfa669fa73b611 files/digest-darts-0.3 229
 RMD160 feb3c274845182c9d29fe6643216a6c5e27f25ed files/digest-darts-0.3 229
 SHA256 90cc04b7ee6e87248ed4747ff7fa2d03bed3fc283d450d780abaab0d530aa870 files/digest-darts-0.3 229
+MD5 600acd9e985e1f90b5d582455b10009a files/digest-darts-0.31 232
+RMD160 5fdb587bd50bcc9e12f073f99db94ba39b58e5ff files/digest-darts-0.31 232
+SHA256 fddab25cc37023f03dd9686bc0c257a09f0df6164fd1cd89ae8ea429979bfce9 files/digest-darts-0.31 232
