@@ -1,0 +1,28 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/darts/darts-0.31.ebuild,v 1.1 2007/04/29 13:26:51 usata Exp $
+
+EAPI="prefix"
+
+DESCRIPTION="A C++ template library that implements Double-Array"
+HOMEPAGE="http://chasen.org/~taku/software/darts/"
+SRC_URI="http://chasen.org/~taku/software/darts/src/${P}.tar.gz"
+
+LICENSE="|| ( BSD LGPL-2.1 )"
+SLOT="0"
+KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86 ~x86-solaris"
+IUSE="zlib"
+DEPEND="zlib? ( sys-libs/zlib )"
+
+src_compile() {
+	econf `use_with zlib` || die
+	emake CFLAGS="${CFLAGS}" CXXFLAGS="${CXXFLAGS}" || die
+}
+
+src_install() {
+	make DESTDIR="${D}" install || die
+
+	dodoc AUTHORS ChangeLog INSTALL NEWS README || die
+	dohtml doc/* || die
+}
+
